--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,11 @@
 name: Deploy GitHub Pages
-
+  env:
+    GH_TOKEN: ${{ secrets.GH_TOKEN}}\
+  run: | 
+    git config --global user.name "GitHub Actions"
+    git config --global user.email "github-actions[bot]@users.noreply.github.com"
+    git remote set-url origin https://$GH_TOKEN@github.com/${{ github.repository }}.git
+    git push --force origin github-pages-deploy-action/l88pnuxaj:gh-pages
 on:
   push:
     branches: [main]
